--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
+  },
   "keywords": []
 }
